--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^17.0.1",
     "react-leaflet": "^2.8.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
